recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:3: error: not found: value crab
		crab(level-1,length/Math.sqrt(2));
                ^Sierpinski:5: error: not found: value crab
		crab(level-1,length/Math.sqrt(2));
                ^