recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
		if (level > 0 ) {
		left(45);
		crab(level-1,length/Math.sqrt(2));
		right(90);
		crab(level-1,length/Math.sqrt(2));
		left(45);
	} else {
		avance(length);
	}
}
